--- a/index.html
+++ b/index.html
@@ -35,14 +35,26 @@
         </div>
     </div>
     <script>
+        function getRelativeTime(timestamp) {
+            const DAY_MILLISECONDS = 1000 * 60 * 60 * 24;
+            const rtf = new Intl.RelativeTimeFormat('en', {
+                numeric: 'auto',
+            });
+            const daysDifference = Math.round(
+                (timestamp - new Date().getTime()) / DAY_MILLISECONDS,
+            );
+
+            return rtf.format(daysDifference, 'day');
+        }
         function get_most_recent_repo(user) {
             const url = `https://api.github.com/users/${user}/repos?per_page=100`;
             return fetch(url)
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error(`HTTP error! status: ${response.status}`);
+                .then(async response => {
+                    data = await response.json();
+                    if (!response.ok || data.length === 0) {
+                        return [{name: "repo_fetch_failed"}];
                     }
-                    return response.json();
+                    return data;
                 })
                 .then(data => {
                     data.sort((a, b) => new Date(b.pushed_at) - new Date(a.pushed_at));
@@ -56,11 +68,21 @@
             return fetch(url)
                 .then(response => {
                     if (!response.ok) {
-                        throw new Error(`HTTP error! status: ${response.status}`);
+                        return [{
+                            commit: {
+                                message: "Fetching commits failed",
+                                author: {
+                                    date: new Date().toISOString(),
+                                }
+                            },
+                            html_url: "https://mecaneer23.github.io/most-recent-git-commit",
+                            sha: "Try again"
+                        }];
                     }
                     return response.json();
                 })
                 .then(data => {
+                    console.log(data)
                     return {
                         repo: repo,
                         message: data[0].commit.message,
@@ -79,7 +101,7 @@
             const commitUrl = new URL(data.url);
             document.querySelector(".card .link").href = `${commitUrl.protocol}//${commitUrl.host}${commitUrl.pathname.split('/').slice(0, 3).join('/')}`;
             document.querySelector(".card .subtitle").innerHTML = data.message;
-            document.querySelector(".card .date").innerHTML = new Date(data.date).toString();
+            document.querySelector(".card .date").innerHTML = new Date(data.date).toString() + "<br>(" + getRelativeTime(new Date(data.date)) + ")";
             const url = document.querySelector(".card .url");
             url.href = data.url;
             url.innerHTML = data.sha;
