feature: remove underline from correct page

--- a/image/index.html
+++ b/image/index.html
@@ -15,6 +15,10 @@
             width: fit-content;
         }
 
+        .card a {
+            text-decoration: none;
+        }
+
         .lang-color {
             border-radius: 50%;
             width: 1rem;
@@ -29,7 +33,6 @@
 </head>
 
 <body>
-    <h2>Recently, I've been working on:</h2>
     <div class="card">
         <h2><a class="link" href=""></a></h2>
         <p class="desc"></p>
