feature: use relative imports

--- a/image/index.html
+++ b/image/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="/image/html2canvas.min.js"></script>
-    <script src="/image/env.js"></script>
+    <script src="html2canvas.min.js"></script>
+    <script src="env.js"></script>
     <style>
         #card {
             border-radius: 2vh;
