feature: fix error on potential lack of color

--- a/image/index.html
+++ b/image/index.html
@@ -70,7 +70,10 @@
                     return response.json();
                 })
                 .then(async data => {
-                    return data[lang].color;
+                    if (data[lang] !== undefined) {
+                        return data[lang].color;
+                    }
+                    return "gray";
                 })
         }
         async function make_card() {
