feat: add help if page appears to load forever

--- a/link/index.html
+++ b/link/index.html
@@ -78,6 +78,7 @@
     </style>
     <div class="loader"></div>
     <div class="loading-text">Loading... Please wait</div>
+    <p style="color: gray;">Make sure you have specified a user in the link (?user=mecaneer23)</p>
 </body>
 
 </html>
